--- a/food-app/src/App.css
+++ b/food-app/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.btn-add{
+  float: right;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
